<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Testing Edit Text</string>
    <string name="settings">Settings</string>
    <string name="framework_edittext">Framework EditText</string>
    <string name="custom_edittext">Custom EditText</string>
    <string name="import_settings">Import settings</string>
    <string name="export_settings">Export settings</string>
    <string name="failed_to_access_file">Failed to access file</string>
    <string name="failed_to_import_settings">Failed to import settings</string>
    <string name="failed_to_export_settings">Failed to export settings</string>
    <string name="import_settings_successful">Settings successfully imported</string>
    <string name="export_settings_successful">Settings successfully exported</string>
    <string name="failed_to_find_file">Failed to find the file</string>
    <string name="failed_to_read_file">Failed to read the file</string>
    <string name="failed_to_open_file">Failed to open to the file</string>
    <string name="modify_text_input_screen">Modify text input</string>
    <string name="modify_committed_text_title">Modify committed text</string>
    <string name="modify_committed_text_summary">Modify text when it is committed or the composition is finished</string>
    <string name="modify_composed_text_title">Modify composed text</string>
    <string name="modify_composed_text_summary">Modify text when it is being composed</string>
    <string name="modify_composed_changes_only_title">Modify composed changes</string>
    <string name="modify_composed_changes_only_summary">Only modify the part of the composition that is different from the previous composition</string>
    <string name="restrict_input_text_category">Restrict input text</string>
    <string name="translate_input_text_category">Translate input text</string>
    <string name="returning_text_screen">Returning text</string>
    <string name="skip_extracting_text_title">Skip extracting text</string>
    <string name="skip_extracting_text_summary">Documentation for InputConnection#getExtractedText indicates that null could be returned if the editor can\'t comply with the request for some reason. Always return null.</string>
    <string name="ignore_extracted_text_monitor_title">Ignore the extracted text monitor flag</string>
    <string name="ignore_extracted_text_monitor_summary">Ignore the GET_EXTRACTED_TEXT_MONITOR flag passed to InputConnection#getExtractedText and don\'t call InputMethodManager#updateExtractedText when calling InputMethodManager#updateSelection. Although documentation doesn\'t specifically call it out, it may be valid to skip when also returning null (not being able to comply with the request). Other uses to ignore this flag are probably inappropriate.</string>
    <string name="update_selection_before_extracted_text_title">Update selection before text extract</string>
    <string name="update_selection_before_extracted_text_summary">Documentation doesn\'t indicate the order of calling InputMethodManager#updateExtractedText and InputMethodManager#updateSelection when both need to be called. Unlike the framework EditText, call updateSelection before updateExtractedText.</string>
    <string name="update_extracted_text_only_on_net_changes_title">Only update extracted text on change</string>
    <string name="update_extracted_text_only_on_net_changes_summary">Documentation doesn\'t indicate whether InputMethodManager#updateExtractedText should actually be called when there was no net change in the text. Only call updateExtractedText when text actually changes.</string>
    <string name="extract_full_text_title">Extract full text</string>
    <string name="extract_full_text_summary">ExtractedText can be returned with partialStartOffset and partialEndOffset populated (helps indicate what text changed), or they can be set to -1 and use startOffset. Always skip the partial offsets when updating extracted text for text changes.</string>
    <string name="limit_extract_monitor_text_title">Limit extract text</string>
    <string name="limit_extract_monitor_text_summary">When updating extracted text with full text or returning text from InputConnection#getExtractedText, limit the length of the text that is sent.</string>
    <string name="limit_returned_text_title">Limit text returned around the cursor</string>
    <string name="limit_returned_text_summary">InputConnection\'s getTextBeforeCursor, getTextAfterCursor, and getSurroundingText methods specifically mention in their documentation that the returned text may not be as long as what was requested, such as for performance reasons. Set a hard limit of the length of text returned on either before or after the cursor.</string>
    <string name="unit_characters"><xliff:g id="CHARACTERS" example="50">%s</xliff:g> characters</string>
    <string name="no_character_limit">No limit</string>
    <string name="composing_text_screen">Composing text</string>
    <string name="simulate_old_target_versions_screen">Simulate old target versions</string>
    <string name="added_in_api_level_31">Added in API level 31 (Android 12)</string>
    <string name="added_in_api_level_25">Added in API level 25 (Nougat MR1)</string>
    <string name="added_in_api_level_24">Added in API level 24 (Nougat)</string>
    <string name="added_in_api_level_21">Added in API level 21 (Lollipop)</string>
    <string name="added_in_api_level_11">Added in API level 11 (Honeycomb)</string>
    <string name="added_in_api_level_9">Added in API level 9 (Gingerbread)</string>
    <string name="skip_getsurroundingtext_title">Don\'t implement getSurroundingText</string>
    <string name="skip_getsurroundingtext_summary">Behave as if InputConnection#getSurroundingText wasn\'t implemented, like some text editors targeting an earlier version. Prior to Android 13, it will just return null, and starting in Android 13, it will call the default implementation (which currently calls getSelectedText, which could cause a crash if that isn\'t implemented).</string>
    <string name="skip_performspellcheck_title">Don\'t implement performSpellCheck</string>
    <string name="skip_performspellcheck_summary">Behave as if InputConnection#performSpellCheck wasn\'t implemented, like some text editors targeting an earlier version. Prior to Android 13, it will just do nothing (the return value from the editor isn\'t actually sent to the IME, so that doesn\'t matter), and starting in Android 13, it will call the default implementation (which currently also does nothing).</string>
    <string name="skip_setimeconsumesinput_title">Don\'t implement setImeConsumesInput</string>
    <string name="skip_setimeconsumesinput_summary">Behave as if InputConnection#setImeConsumesInput wasn\'t implemented, like some text editors targeting an earlier version. Prior to Android 13, it will just do nothing (the return value from the editor isn\'t actually sent to the IME, so that doesn\'t matter), and starting in Android 13, it will call the default implementation (which currently also does nothing).</string>
    <string name="skip_commitcontent_title">Don\'t implement commitContent</string>
    <string name="skip_commitcontent_summary">Behave as if InputConnection#commitContent wasn\'t implemented, like some text editors targeting an earlier version, so it will just return false.</string>
    <string name="skip_closeconnection_title">Don\'t implement closeConnection</string>
    <string name="skip_closeconnection_summary">Behave as if InputConnection#closeConnection wasn\'t implemented, like some text editors targeting an earlier version, so it will do nothing.</string>
    <string name="skip_deletesurroundingtextincodepoints_title">Don\'t implement deleteSurroundingTextInCodePoints</string>
    <string name="skip_deletesurroundingtextincodepoints_summary">Behave as if InputConnection#deleteSurroundingTextInCodePoints wasn\'t implemented, like some text editors targeting an earlier version. Prior to Android 13, it will will do nothing and just return false, and starting in Android 13, it will do nothing and return true (controlled by the system).</string>
    <string name="skip_requestcursorupdates_title">Don\'t implement requestCursorUpdates</string>
    <string name="skip_requestcursorupdates_summary">Behave as if InputConnection#requestCursorUpdates wasn\'t implemented, like some text editors targeting an earlier version, so it will just return false (or crash prior to Nougat).</string>
    <string name="skip_commitcorrection_title">Don\'t implement commitCorrection</string>
    <string name="skip_commitcorrection_summary">Behave as if InputConnection#commitCorrection wasn\'t implemented, like some text editors targeting an earlier version. Prior to Android 13, it will just crash (due to a bug in Android, it still crashes on Nougat through Android 12). Starting in Android 13, it will do nothing and return true (controlled by the system).</string>
    <string name="skip_getselectedtext_title">Don\'t implement getSelectedText</string>
    <string name="skip_getselectedtext_summary">Behave as if InputConnection#getSelectedText wasn\'t implemented, like some text editors targeting an earlier version, so it will do nothing and just return null (documentation doesn\'t clarify this behavior, but this is what happens) (or crash prior to Nougat).</string>
    <string name="skip_setcomposingregion_title">Don\'t implement setComposingRegion</string>
    <string name="skip_setcomposingregion_summary">Behave as if InputConnection#setComposingRegion wasn\'t implemented, like some text editors targeting an earlier version. Prior to Nougat, it will crash. On Nougat through Android 12, it will do nothing and just return false, and on Android 13 and later, it will do nothing and return true (controlled by the system).</string>
    <string name="simulate_system_behavior_screen">Simulate system behavior</string>
    <string name="update_delay_title">Delay selection and extracted text updates</string>
    <string name="update_delay_summary">Simulate a delay from a slow device. Delay calls to InputMethodManager#updateSelection and InputMethodManager#updateExtractedText.</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <string name="test_field_list_screen">Test fields</string>
    <string name="input_type">Input type</string>
    <string name="ime_options">IME options</string>
    <string name="ime_options_action">Action</string>
    <string name="ime_options_flag_force_ascii">Force ascii flag</string>
    <string name="ime_options_flag_navigate_next">Navigate next flag</string>
    <string name="ime_options_flag_navigate_previous">Navigate previous flag</string>
    <string name="ime_options_flag_no_accessory_action">No accessory action</string>
    <string name="ime_options_flag_no_enter_action">No enter action</string>
    <string name="ime_options_flag_no_extract_ui">No extract UI</string>
    <string name="ime_options_flag_no_fullscreen">No fullscreen</string>
    <string name="ime_options_flag_no_personalized_learning">No personalized learning</string>
    <string name="ime_action">IME action</string>
    <string name="private_ime_options">Private IME options</string>
    <string name="select_all_on_focus">Select all on focus</string>
    <string name="max_length">Max length</string>
    <string name="allow_undo">Allow undo</string>
    <string name="dynamic_set_not_supported_in_framework">Note that the framework EditText doesn\'t support setting this dynamically, so this will only apply to the custom EditText</string>
    <string name="text_locales">Text locales</string>
    <string name="ime_hint_locales">IME hint locales</string>
    <string name="default_text">Default text</string>
    <string name="hint_text">Hint text</string>
    <string name="display_screen">Display</string>
</resources>