<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022 Eli Wittman

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/added_in_api_level_31"
        android:key="pref_key_added_in_api_level_31">

        <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
            android:key="pref_key_skip_getsurroundingtext"
            android:title="@string/skip_getsurroundingtext_title"
            android:summary="@string/skip_getsurroundingtext_summary" />

        <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
            android:key="pref_key_skip_performspellcheck"
            android:title="@string/skip_performspellcheck_title"
            android:summary="@string/skip_performspellcheck_summary" />

        <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
            android:key="pref_key_skip_setimeconsumesinput"
            android:title="@string/skip_setimeconsumesinput_title"
            android:summary="@string/skip_setimeconsumesinput_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/added_in_api_level_25"
        android:key="pref_key_added_in_api_level_25">

        <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
            android:key="pref_key_skip_commitcontent"
            android:title="@string/skip_commitcontent_title"
            android:summary="@string/skip_commitcontent_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/added_in_api_level_24"
        android:key="pref_key_added_in_api_level_24">

        <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
            android:key="pref_key_skip_closeconnection"
            android:title="@string/skip_closeconnection_title"
            android:summary="@string/skip_closeconnection_summary" />

        <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
            android:key="pref_key_skip_deletesurroundingtextincodepoints"
            android:title="@string/skip_deletesurroundingtextincodepoints_title"
            android:summary="@string/skip_deletesurroundingtextincodepoints_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/added_in_api_level_21"
        android:key="pref_key_added_in_api_level_21">

        <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
            android:key="pref_key_skip_requestcursorupdates"
            android:title="@string/skip_requestcursorupdates_title"
            android:summary="@string/skip_requestcursorupdates_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/added_in_api_level_11"
        android:key="pref_key_added_in_api_level_11">

        <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
            android:key="pref_key_skip_commitcorrection"
            android:title="@string/skip_commitcorrection_title"
            android:summary="@string/skip_commitcorrection_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/added_in_api_level_9"
        android:key="pref_key_added_in_api_level_9">

        <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
            android:key="pref_key_skip_getselectedtext"
            android:title="@string/skip_getselectedtext_title"
            android:summary="@string/skip_getselectedtext_summary" />

        <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
            android:key="pref_key_skip_setcomposingregion"
            android:title="@string/skip_setcomposingregion_title"
            android:summary="@string/skip_setcomposingregion_summary" />

    </PreferenceCategory>

</PreferenceScreen>
