<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022-2024 Eli Wittman

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.wittmane.testingedittext.settings.preferences.TextDialogPreference
        android:key="pref_key_default_text"
        android:title="@string/default_text"
        app:defaultText=""
        app:inputType="textMultiLine|textStyled" />

    <com.wittmane.testingedittext.settings.preferences.TextDialogPreference
        android:key="pref_key_hint_text"
        android:title="@string/hint_text"
        app:defaultText=""
        app:inputType="textMultiLine|textStyled" />

    <com.wittmane.testingedittext.settings.preferences.InputTypePreference
        android:title="@string/input_type" />

    <com.wittmane.testingedittext.settings.preferences.ImeOptionsPreference
        android:title="@string/ime_options" />

    <com.wittmane.testingedittext.settings.preferences.ImeActionPreference
        android:title="@string/ime_action" />

    <com.wittmane.testingedittext.settings.preferences.TextDialogPreference
        android:key="pref_key_private_ime_options"
        android:title="@string/private_ime_options"
        app:inputType="text" />

    <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
        android:key="pref_key_select_all_on_focus"
        android:title="@string/select_all_on_focus" />

    <com.wittmane.testingedittext.settings.preferences.TextDialogPreference
        android:key="pref_key_max_length"
        android:title="@string/max_length"
        app:defaultText="-1"
        app:inputType="number" />

    <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
        android:key="pref_key_allow_undo"
        android:title="@string/allow_undo"
        android:summary="@string/dynamic_set_not_supported_in_framework"
        android:defaultValue="true" />

    <com.wittmane.testingedittext.settings.preferences.LocaleEntryListPreference
        android:key="pref_key_text_locales"
        android:title="@string/text_locales" />

    <com.wittmane.testingedittext.settings.preferences.LocaleEntryListPreference
        android:key="pref_key_ime_hint_locales"
        android:title="@string/ime_hint_locales"/>

    <com.wittmane.testingedittext.settings.preferences.ModifyTextPreference
        android:title="@string/modify_text_input_screen" />

    <com.wittmane.testingedittext.settings.preferences.ReturningTextPreference
        android:title="@string/returning_text_screen" />

    <com.wittmane.testingedittext.settings.preferences.ComposingTextPreference
        android:title="@string/composing_text_screen" />

    <com.wittmane.testingedittext.settings.preferences.TargetVersionPreference
        android:title="@string/simulate_old_target_versions_screen" />

    <com.wittmane.testingedittext.settings.preferences.SystemBehaviorPreference
        android:title="@string/simulate_system_behavior_screen" />

</PreferenceScreen>
