<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022 Eli Wittman

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:key="pref_key_modify_committed_text"
        android:title="@string/modify_committed_text_title"
        android:summary="@string/modify_committed_text_summary" />
    <SwitchPreference
        android:key="pref_key_modify_composed_text"
        android:title="@string/modify_composed_text_title"
        android:summary="@string/modify_composed_text_summary" />
    <SwitchPreference
        android:key="pref_key_modify_composed_changes_only"
        android:title="@string/modify_composed_changes_only_title"
        android:summary="@string/modify_composed_changes_only_summary"
        android:dependency="pref_key_modify_composed_text" />

    <PreferenceCategory android:title="@string/restrict_input_text_category">

        <!--TODO: (EW) allow specific-->

        <!--TODO: (EW) allow range-->

        <!--TODO: (EW) block specific-->

        <!--TODO: (EW) block range-->

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/translate_input_text_category">

        <!--TODO: (EW) shift codepoint-->

        <!--TODO: (EW) translate specific characters/words-->

    </PreferenceCategory>

</PreferenceScreen>