<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022-2025 Eli Wittman

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.wittmane.testingedittext.settings.preferences.ModifyTextPreference
        android:title="@string/modify_text_input_screen" />

    <com.wittmane.testingedittext.settings.preferences.ReturningTextPreference
        android:title="@string/returning_text_screen" />

    <com.wittmane.testingedittext.settings.preferences.ComposingTextPreference
        android:title="@string/composing_text_screen" />

    <com.wittmane.testingedittext.settings.preferences.TargetVersionPreference
        android:title="@string/simulate_old_target_versions_screen" />

    <com.wittmane.testingedittext.settings.preferences.SystemBehaviorPreference
        android:title="@string/simulate_system_behavior_screen" />

    <PreferenceScreen
        android:fragment="com.wittmane.testingedittext.settings.fragments.TestFieldGroupListSettingsFragment"
        android:title="@string/test_field_list_screen"
        android:key="pref_screen_test_field_group_list" />

    <com.wittmane.testingedittext.settings.preferences.DisplayPreference
        android:title="@string/display_screen" />

</PreferenceScreen>
