<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022-2024 Eli Wittman

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.wittmane.testingedittext.settings.preferences.EnhancedListPreference
        android:key="pref_key_ime_options_action"
        android:title="@string/ime_options_action"
        android:entries="@array/ime_options_actions"
        android:entryValues="@array/ime_options_action_values"/>

    <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
        android:key="pref_key_ime_options_flag_force_ascii"
        android:title="@string/ime_options_flag_force_ascii" />

    <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
        android:key="pref_key_ime_options_flag_navigate_next"
        android:title="@string/ime_options_flag_navigate_next" />

    <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
        android:key="pref_key_ime_options_flag_navigate_previous"
        android:title="@string/ime_options_flag_navigate_previous" />

    <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
        android:key="pref_key_ime_options_flag_no_accessory_action"
        android:title="@string/ime_options_flag_no_accessory_action" />

    <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
        android:key="pref_key_ime_options_flag_no_enter_action"
        android:title="@string/ime_options_flag_no_enter_action" />

    <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
        android:key="pref_key_ime_options_flag_no_extract_ui"
        android:title="@string/ime_options_flag_no_extract_ui" />

    <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
        android:key="pref_key_ime_options_flag_no_fullscreen"
        android:title="@string/ime_options_flag_no_fullscreen" />

    <com.wittmane.testingedittext.settings.preferences.LongTextSwitchPreference
        android:key="pref_key_ime_options_flag_no_personalized_learning"
        android:title="@string/ime_options_flag_no_personalized_learning" />

</PreferenceScreen>
